# Procchi

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  lint-backend.yml  lint-frontend.yml
backend/: Cargo.toml
backend/src/: api.rs  logger.rs  main.rs  middleware.rs  request_data.rs  resource_watcher.rs  util.rs
backend/src/plugins/: minecraft.rs  mod.rs
backend/src/web/: api.rs  middleware.rs  mod.rs  request_data.rs
frontend/: bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  types.d.ts  vite.config.ts
frontend/src/: index.tsx  style.css
frontend/src/components/: Loader.css  Loader.tsx  QuickStats.css  QuickStats.tsx  ThemeSwitch.css  ThemeSwitch.tsx
frontend/src/components/Plugins/: PluginsSection.css  PluginsSection.tsx
frontend/src/components/Plugins/Minecraft/: Minecraft.tsx
frontend/src/components/Stats/: Stat.css  Stat.tsx  StatRow.css  StatRow.tsx
frontend/src/components/alert/: Alert.css  Alert.tsx  AlertList.css  AlertList.tsx
frontend/src/components/graph/: LineGraph.css  LineGraph.tsx
frontend/src/components/icons/: ArrowDown.tsx  ArrowUp.tsx  MoonIcon.tsx  SunIcon.tsx  icon.css
frontend/src/components/interaction/: Button.css  Button.tsx
frontend/src/components/text/: GraphHeader.css  GraphHeader.tsx
frontend/src/pages/: _404.tsx
frontend/src/pages/Auth/: index.tsx
frontend/src/pages/Home/: ProcessTable.css  ProcessTable.tsx  data.css  data.tsx  index.tsx  style.css
frontend/src/util/: byte.ts  colors.ts
