[package]
name = "procchi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.3.21", features = ["derive"] }
include_dir = "0.7.3"
mime_guess = "2.0.4"
serde = "1.0.188"
serde_json = "1.0.107"
sysinfo = "0.29.10"
tide = "0.16.0"
